--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
+
+.completed {
+  text-decoration: line-through;
+}
